--- a/rock.html
+++ b/rock.html
@@ -4,13 +4,15 @@
     <meta charset="utf-8">
     <title>rock-site</title>
     <link rel="stylesheet" href="css/rock.css">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/media.css">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
   </head>
 
   <body>
     <div class="container">
-      <nav>
-       <div class="start"><a href="#">Start Bootstrap</a></div>
+      <nav class="row">
+       <div class="col-12 start"><a href="#">Start Bootstrap</a></div>
          <ul class="menu">
           <li><a href="#">Home</a></li>
           <li><a href="#">Aboout</a></li>
@@ -19,7 +21,7 @@
          </ul>
       </nav>
 
-      <header>
+      <header class="row">
        <div class="img">
         <div class="txt-img">
          <h1>One Page Wonder</h1>
@@ -28,9 +30,9 @@
        </div>
       </header>
 
-      <section class="one">
-       <img src="assets/images/rock1.jpg" alt="rock1">
-       <div class="txt">
+      <section class="col-12 one">
+       <img class="col-5" src="assets/images/rock1.jpg" alt="rock1">
+       <div class="col-6 txt">
         <h1>For those about to rock...</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -38,9 +40,9 @@
         <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
      </section>
-     <section class="two">
-       <img src="assets/images/rock3.jpg" alt="rock2">
-       <div class="txt">
+     <section class="col-12 two">
+       <img class="col-5" src="assets/images/rock3.jpg" alt="rock2">
+       <div class="col-6 txt">
         <h1>We salute you!</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
@@ -48,18 +50,18 @@
         <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
      </section>
-     <section class="three">
-       <img src="assets/images/rock2.jpg" alt="rock3">
-       <div class="txt">
+     <section class="col-12 three">
+       <div class="col-6 txt">
         <h1>Let there be rock!</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit,</p>
         <p>sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Ut enim ad minim veniam,</p>
         <p>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
        </div>
+       <img class="col-5" src="assets/images/rock2.jpg" alt="rock3">
      </section>
 
-     <footer>
+     <footer class="col-12">
       Copyright &#169; Your Website 2017
      </footer>
     </div>
